tests/baselines/reference/parserStrictMode3-negative.errors.txt
parserStrictMode3-negative.ts(1,1): error TS2630: Cannot assign to 'eval' because it is a function.


==== parserStrictMode3-negative.ts (1 errors) ====
    eval = 1;
    ~~~~
!!! error TS2630: Cannot assign to 'eval' because it is a function.